<resources>
    <string name="app_name">Dice Game - CW1</string>
    <string name="about">About</string>
    <string name="dice_roller_game">Dice Roller Game</string>
    <string name="new_game">New Game</string>
    <string name="ok">OK</string>
    <string name="aboutHeader">About</string>
    <string name="score">Score</string>
    <string name="throwButton">Throw</string>
    <string name="two_zeros">00</string>
    <string name="plaigarismStatement">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.</string>
    <string name="author">Thushara Piyasekara - (w1899372)</string>
    <string name="set_win_count">Set Win Count</string>
    <string name="default_win_score">Current Win Score : 101</string>
    <string name="you_win">You win!</string>
    <string name="congratulations">Congratulations! :)</string>
    <string name="human">HUMAN</string>
    <string name="computer">COMPUTER</string>
    <string name="h_00_c_00">H: 00 / C: 00</string>
    <string name="_00_00">00/00</string>
</resources>