<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dice_roller_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125"
            android:id="@+id/introText"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@+id/newGameButt"
            android:textSize="40sp"
            android:textColor="#00BCD4"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.482" />

    <Button
            android:text="@string/new_game"
            android:layout_width="214dp"
            android:layout_height="125dp"
            android:id="@+id/newGameButt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/introText"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/aboutButt" />

    <Button
            android:text="@string/about"
            android:layout_width="214dp"
            android:layout_height="125dp"
            android:id="@+id/aboutButt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newGameButt"
            android:layout_marginBottom="363dp" />

    <Button
            android:text="@string/set_win_count"
            android:layout_width="109dp"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editWinCountButton"
            app:layout_constraintHorizontal_bias="0.785"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="172dp" />

    <EditText
            android:layout_width="153dp"
            android:layout_height="49dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/winScoreEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="180dp"
            android:importantForAutofill="no"
            app:layout_constraintHorizontal_bias="0.17" />

    <Switch
            android:text="Optmise Strategy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/optimiseSwitch"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
            android:text="@string/default_win_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentWinScore"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/winScoreEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>