<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="394dp"
            android:layout_height="295dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#DAF8D0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintVertical_bias="0.04">

        <TextView
                android:text="@string/you_win"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/winMsgTextView"
                android:textColor="#37FF00"
                android:textSize="80sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:layout_marginTop="4dp" />

        <TextView
                android:text="@string/congratulations"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/CongratsTextView"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple_200"
                android:typeface="serif" />

        <Button
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/popupClose"
                android:layout_marginTop="20dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>