<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gameScreen"
        android:background="#EAFDFF"
        tools:context=".GameScreen">


    <!--ButtonView for the Score button-->
    <Button
            android:text="@string/score"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:backgroundTint="#00DDFF"
            android:typeface="sans"
            android:id="@+id/scoreButt"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="111dp"
            app:layout_constraintStart_toEndOf="@+id/throwButt" />

    <!--ButtonView for the Throw button-->
    <Button
            android:text="@string/throwButton"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:backgroundTint="#00DDFF"
            android:typeface="sans"
            android:id="@+id/throwButt"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="44dp" />


    <!--TextView for the score of the computer player-->

    <!--TextView for the score of the human player-->

    <!--LinearLayout containing the ImageButtons(Dices) of Computer player-->

    <!--LinearLayout containing the ImageButtons(Dices) of human player-->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="99dp"
            android:layout_height="476dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"
            app:layout_constraintVertical_bias="0.478"
            android:id="@+id/linearLayout2"
            android:layout_marginStart="101dp"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.444">

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/c_dice1"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/c_dice2"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/c_dice4"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/c_dice3"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/c_dice5"
                android:contentDescription="TODO" />

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="96dp"
            android:layout_height="474dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="260dp"
            app:layout_constraintVertical_bias="0.474"
            android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"
            app:layout_constraintHorizontal_bias="0.166">

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/h_dice1"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/h_dice2"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/h_dice4"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/h_dice3"
                android:contentDescription="TODO" />

        <ImageButton
                style="@style/DiceImageButtonStyle"
                android:background="@android:color/transparent"
                android:id="@+id/h_dice5"
                android:contentDescription="TODO" />

    </LinearLayout>

    <TextView
            android:text="@string/_00_00"
            android:textStyle="bold"
            android:typeface="sans"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"
            android:textColor="#00DDFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreBoard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

    <TextView
            android:text="@string/h_00_c_00"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:typeface="sans"
            android:textSize="24sp"
            android:textColor="#00DDFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winCount"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" />

    <TextView
            android:text="@string/human"
            android:textColor="#3F51B5"
            android:textStyle="bold"
            android:typeface="sans"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginEnd="272dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="63dp"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/winCount"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="20sp" />

    <TextView
            android:text="@string/computer"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:textColor="#3F51B5"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginEnd="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            android:layout_marginStart="142dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/scoreBoard" />


</androidx.constraintlayout.widget.ConstraintLayout>